--- a/resources/src/freeVersion/res/values/strings.xml
+++ b/resources/src/freeVersion/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="change_volume">change volume</string>
     <string name="previous_song">previous song</string>
     <string name="play_or_pause_song">play or pause song</string>
+    <string name="play_song">play song</string>
+    <string name="download_song">Скачать песню</string>
     <string name="next_song">next song</string>
     <string name="add_new_playlist">add new playlist</string>
     <string name="open">Open</string>
@@ -43,7 +45,17 @@
     <string name="no_favourite_songs_added">No favourite songs added</string>
     <string name="sounds_not_found">Sounds not find</string>
     <string name="update">Update</string>
+    <string name="you_cannot_add_unloaded_songs_to_favourite">You cannot add unloaded songs to favourite</string>
+
+    <string name="description">Description: \n %1s</string>
+    <string name="tags">Tags: \n %1s</string>
+    <string name="duration">Duration: %1s</string>
+    <string name="file_size">File size: %1dKBs</string>
+    <string name="username">Username: %1s</string>
+    <string name="num_downloads">Number of downloads: %1d</string>
+
 
     <string name="channel_name_resource" translatable="false">ChannelNameResourceId</string>
     <string name="zero_time" translatable="false">0:00</string>
+
 </resources>
