--- a/resources/src/freeVersion/res/values/strings.xml
+++ b/resources/src/freeVersion/res/values/strings.xml
@@ -43,9 +43,11 @@
     <string name="player_canceled">Player canceled</string>
     <string name="player_error">Player error</string>
     <string name="no_favourite_songs_added">No favourite songs added</string>
-    <string name="sounds_not_found">Sounds not find</string>
+    <string name="sounds_not_found">Sounds not found</string>
     <string name="update">Update</string>
     <string name="you_cannot_add_unloaded_songs_to_favourite">You cannot add unloaded songs to favourite</string>
+    <string name="enter_artist_name_or_song_title">Enter artist name or song title</string>
+
 
     <string name="description">Description: \n %1s</string>
     <string name="tags">Tags: \n %1s</string>
